k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: terralogic-frontend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
